Text added to about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by Timi. It uses data from mapbox.com and weatherstack.com!</p>
             <img class="selfie" src="/img/IMG_20180130_170948_0.jpg" alt="My Image">
         </div>
 
