Removed some comments

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,7 @@
         <div class="main-content">
             {{>header}}
             <p>This site was created by Timi. It uses data from mapbox.com and weatherstack.com!</p>
-            <img class="selfie" src="/img/IMG_20180130_170948_0.jpg" alt="My Image">
+            <img class="selfie" src="/img/Image 2023-02-19 at 22.32.56.jpeg" alt="My Image">
         </div>
 
         {{>footer}}
